# acorns

./: .travis.yml  LICENSE.rst  MANIFEST.in  README.md  README.rst  setup.cfg  setup.py  tox.ini
acorns/: __init__.py  acorns.py  cluster_definition.py  conftest.py  io.py  plotting.py  setup.py  tree_definition.py  verbose_output.py
astropy_helpers/astropy_helpers/: version.py
docs/: Makefile  conf.py  index.rst  make.bat
docs/acorns/: index.rst
docs/source/: conf.py  example_2d.rst  example_3d.rst  index.rst  installation.rst  verbose_description.rst
examples/: G035_cont.fits  example.acorn  example.leodis  example_2d.acorn  example_script.py  output.py  output_leodis.py  plot.py  plot_2d.py  plot_leodis.py  plot_leodis_2d.py  run.py  run_2d.py  run_leodis.py  run_leodis_2d.py
examples/G035_cont/config_files/: acorns.config
examples/fits_final_pdbi/config_files/: acorns.config
examples/leodis_output/output_fits/: leodis_hierarchical_tree_0.fits  leodis_hierarchical_tree_1.fits  leodis_hierarchical_tree_11.fits  leodis_hierarchical_tree_12.fits  leodis_hierarchical_tree_13.fits  leodis_hierarchical_tree_14.fits  leodis_hierarchical_tree_16.fits  leodis_hierarchical_tree_2.fits  leodis_hierarchical_tree_3.fits  leodis_hierarchical_tree_4.fits  leodis_hierarchical_tree_5.fits  leodis_hierarchical_tree_6.fits  leodis_hierarchical_tree_8.fits  leodis_hierarchical_tree_9.fits  leodis_nonhierarchical_tree_0.fits  leodis_nonhierarchical_tree_1.fits  leodis_nonhierarchical_tree_10.fits  leodis_nonhierarchical_tree_11.fits  leodis_nonhierarchical_tree_12.fits  leodis_nonhierarchical_tree_13.fits  leodis_nonhierarchical_tree_14.fits  leodis_nonhierarchical_tree_15.fits  leodis_nonhierarchical_tree_16.fits  leodis_nonhierarchical_tree_17.fits  leodis_nonhierarchical_tree_18.fits  leodis_nonhierarchical_tree_19.fits  leodis_nonhierarchical_tree_2.fits  leodis_nonhierarchical_tree_20.fits  leodis_nonhierarchical_tree_21.fits  leodis_nonhierarchical_tree_22.fits  leodis_nonhierarchical_tree_23.fits  leodis_nonhierarchical_tree_24.fits  leodis_nonhierarchical_tree_25.fits  leodis_nonhierarchical_tree_3.fits  leodis_nonhierarchical_tree_4.fits  leodis_nonhierarchical_tree_5.fits  leodis_nonhierarchical_tree_6.fits  leodis_nonhierarchical_tree_7.fits  leodis_nonhierarchical_tree_8.fits  leodis_nonhierarchical_tree_9.fits
examples/output_files/output_fits/: acorns_hierarchical_tree_0.fits  acorns_hierarchical_tree_1.fits  acorns_hierarchical_tree_2.fits  acorns_hierarchical_tree_3.fits  acorns_hierarchical_tree_5.fits  acorns_hierarchical_tree_6.fits  acorns_hierarchical_tree_7.fits  acorns_hierarchical_tree_8.fits  acorns_nonhierarchical_tree_0.fits  acorns_nonhierarchical_tree_10.fits  acorns_nonhierarchical_tree_11.fits  acorns_nonhierarchical_tree_2.fits  acorns_nonhierarchical_tree_3.fits  acorns_nonhierarchical_tree_4.fits  acorns_nonhierarchical_tree_5.fits  acorns_nonhierarchical_tree_6.fits  acorns_nonhierarchical_tree_7.fits  acorns_nonhierarchical_tree_8.fits  acorns_nonhierarchical_tree_9.fits
leodis/: __init__.py  cluster_definition.py  conftest.py  leodis.py  leodis_io.py  leodis_plots.py  progressbar.py  tree_definition.py
