[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[pep8]
# E101 - mix of tabs and spaces
# W191 - use of tabs
# W291 - trailing whitespace
# W292 - no newline at end of file
# W293 - trailing whitespace
# W391 - blank line at end of file
# E111 - 4 spaces per indentation level
# E112 - 4 spaces per indentation level
# E113 - 4 spaces per indentation level
# E901 - SyntaxError or IndentationError
# E902 - IOError
select = E101,W191,W291,W292,W293,W391,E111,E112,E113,E901,E902
exclude = extern,sphinx,*parsetab.py

[metadata]
package_name = leodis
description = A structure finding algorithm
long_description = This package is designed to help find structures in astronomical data
author = Jonathan D. Henshaw
author_email = leodis@gmail.com
license = MIT
url = https://leodis.readthedocs.io
edit_on_github = True
github_project = leodis/leodis
install_requires = astropy
# version should be PEP440 compatible (http://www.python.org/dev/peps/pep-0440)
version = 0.0.1.dev

[entry_points]
astropy-package-template-example = packagename.example_mod:main
