[metadata]
name = acorns
version = 1.0.0
author = Jonathan D. Henshaw
author_email = jonathan.d.henshaw@gmail.com
license = MIT
license_files = licenses/LICENSE.rst
url = https://github.com/jdhenshaw/acorns
description = Agglomerative Clustering for ORganising Nested Structures
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = jdhenshaw/acorns

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    astropy
    numpy
    scipy

[options.entry_points]
console_scripts =
    astropy-package-template-example = packagename.example_mod:main

[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
acorns = data/*

[tool:pytest]
testpaths = "acorns" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    acorns/_astropy_init*
    acorns/conftest.py
    acorns/*setup_package*
    acorns/tests/*
    acorns/*/tests/*
    acorns/extern/*
    acorns/version*
    */acorns/_astropy_init*
    */acorns/conftest.py
    */acorns/*setup_package*
    */acorns/tests/*
    */acorns/*/tests/*
    */acorns/extern/*
    */acorns/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
